force-app/main/default/objects/Grupo_Familiar__c/Grupo_Familiar__c.object-meta.xml
<CustomObject>
    <label>Grupo Familiar</label>
    <nameField>
        <displayFormat>GF-{0000}</displayFormat>
        <label>Nro. de Grupo Familiar</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos Familiares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>