force-app/main/default/objects/Grupo_Familiar__c/fields/Nro_de_socio_del_titular__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_socio_del_titular__c</fullName>
    <label>Nro. de socio del titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>