force-app/main/default/objects/Grupo_Familiar__c/fields/Relacion_con_el_titular__c.field-meta.xml
<CustomField>
    <fullName>Relacion_con_el_titular__c</fullName>
    <label>Relación con el titular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HI</fullName>
                <label>Hij/a</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Cónyuge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>