force-app/main/default/objects/Grupo_Familiar__c/fields/Titular_del_Grupo_Familiar__c.field-meta.xml
<CustomField>
    <fullName>Titular_del_Grupo_Familiar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular del Grupo Familiar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grupos Familiares</relationshipLabel>
    <relationshipName>Grupos_Familiares</relationshipName>
    <type>Lookup</type>
</CustomField>